--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Games\Ball\Scripts\BallInvestSystem.cs" />
      <Compile Include="Assets\Games\Ball\Scripts\BallRemoveSystem.cs" />
      <Compile Include="Assets\Games\Ball\Scripts\GameData.cs" />
+     <Compile Include="Assets\Games\Ball\Scripts\GameInitSystem.cs" />
      <Compile Include="Assets\Games\Ball\Scripts\UISystem.cs" />
      <Compile Include="Assets\Games\Ball\Scripts\Wall.cs" />
      <Compile Include="Assets\Games\Ball\Scripts\WallMoveSystem.cs" />
@@ -100,6 +101,9 @@
  <Reference Include="Unity.VSCode.Editor">
  <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
  </Reference>
+ <Reference Include="Unity.ProBuilder">
+ <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.ProBuilder.dll</HintPath>
+ </Reference>
  <Reference Include="Unity.Jobs">
  <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.Jobs.dll</HintPath>
  </Reference>
@@ -121,8 +125,14 @@
  <Reference Include="Unity.Properties.UI">
  <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.Properties.UI.dll</HintPath>
  </Reference>
+ <Reference Include="Unity.ProBuilder.Editor">
+ <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.ProBuilder.Editor.dll</HintPath>
+ </Reference>
  <Reference Include="Unity.Serialization.Editor">
  <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.Serialization.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.ProBuilder.AssetIdRemapUtility">
+ <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.ProBuilder.AssetIdRemapUtility.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Properties">
  <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.Properties.dll</HintPath>
@@ -213,6 +223,9 @@
  </Reference>
  <Reference Include="Unity.VisualStudio.Editor">
  <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.ProBuilder.AddOns.Editor">
+ <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.ProBuilder.AddOns.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.ScriptableBuildPipeline">
  <HintPath>D:/github/DOTS2020/Library/ScriptAssemblies/Unity.ScriptableBuildPipeline.dll</HintPath>
