--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.1",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.physics": "0.4.0-preview.5",
+    "com.unity.probuilder": "4.2.3",
     "com.unity.render-pipelines.universal": "8.1.0",
     "com.unity.rendering.hybrid": "0.5.2-preview.4",
     "com.unity.test-framework": "1.1.14",
